# pyempty

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  pyrightconfig.json  pytest.ini
data/: .shared-docker-volume
scripts/: add-uvstds.ps1  convert-uvlock2pip.ps1  find-gitrepositoryroot.ps1  install-python-extensions.ps1  install-tools.ps1  invoke-dockerbash.ps1  invoke-dockerbuild.ps1  invoke-dockerstop.ps1  new-venv.ps1
src/: main.py  webserver.py
tests/: e2e_tests.py  test_e2e.py
