[project]
name = "pyempty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[all]>=0.124.0",
    "httpx>=0.28.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.0",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.7",
    "virtualenv>=20.35.4",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
markers = [
    "smoke: mark a test as a smoke test",
    "slow: mark a test that takes a long time to run",
    "api: mark a test that interacts with an API",
    "integration: requires backends"
]
